[package]
name = "amber"
version = "0.1.3"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"
description = "Manage secret values in-repo via public key cryptography"
readme = "README.md"
homepage = "https://github.com/fpco/amber"
repository = "https://github.com/fpco/amber"
license = "MIT"
keywords = ["continuous-integration", "secrets", "encryption"]
categories = ["command-line-utilities"]

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.52"
clap = { version = "3.0.0", features = ["derive", "env"]}
env_logger = "0.9.0"
fs-err = "2.6.0"
log = "0.4.14"
once_cell = "1.9.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0.73"
sodiumoxide = "0.2.7"

[build-dependencies]
anyhow = "1.0.52"
vergen = { version = "6.0.0", default-features = false, features = ["git"] }

[dev-dependencies]
assert_cmd = "2.0.2"
tempfile = "3.2.0"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
