[package]
name = "amber"
version = "0.1.4"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"
description = "Manage secret values in-repo via public key cryptography"
readme = "README.md"
homepage = "https://github.com/fpco/amber"
repository = "https://github.com/fpco/amber"
license = "MIT"
keywords = ["continuous-integration", "secrets", "encryption"]
categories = ["command-line-utilities"]

[dependencies]
aho-corasick = "0.7.19"
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive", "env"] }
env_logger = "0.9.1"
fs-err = "2.8.1"
log = "0.4.17"
once_cell = "1.15.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
serde_json = "1.0.85"
crypto_box = { version = "0.8.2", features = ["seal"]}
hex = "0.4.3"
sha2 = "0.10.6"
base64 = "0.13.1"

[build-dependencies]
anyhow = "1.0.65"
vergen = { version = "7.4.2", default-features = false, features = ["git"] }

[dev-dependencies]
assert_cmd = "2.0.4"
tempfile = "3.3.0"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
